--- a/login.css
+++ b/login.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    background: rgb(215, 230, 244);
 }
 
 .login-container {
@@ -22,7 +22,7 @@ body {
 
 .login-container h1 {
     margin-bottom: 1.5rem;
-    color: #ff7e5f;
+    color: black;
 }
 
 .input-group {
